Fix SonarQube issues